<package format="2">
    <name>zed_capture</name>
    <version>0.0.1</version>
    <description>
      A ZED camera driver ROS node based on OpenCV VideoCapture API for publishing left and right raw images.
    </description>
    <maintainer email="jroh@ti.com">jroh</maintainer>
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>camera_info_manager</build_export_depend>

    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>camera_info_manager</exec_depend>

</package>
