<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ti_vl</name>
  <version>0.1.0</version>
  <description>The ti_vl package</description>
  <maintainer email="vijayp@ti.com">Vijay Pothukuchi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcutils</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>common_msgs</depend>
  <depend>eigen</depend>
  <depend>ti_external</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
